サイドバーのフロント実装

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
-<div class="chat_top">
+<div class="chat-top">
 aaaa
 </div>
-<div class="chat_main">
+<div class="chat-main">
 aaaa
 </div>
 <div class="form">
