--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -3,25 +3,50 @@
 }
 
 /* サイドバー */
-.side_bar {
+.side-bar {
   background-color: #253141;
   width: 300px;
   height: 100vh;
   flex-direction: column;
 }
-
-.side_top {
+/*  */
+.side-top {
   background-color: #253141;
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.user-name a{
+background-color: #253141;
+color: #fafafa;
+font-size: 16px;
+text-decoration: none;
+}
+.create-room a{
+  color: deepskyblue;
+  font-size: 10px;
+  padding: 14px;
+  border: 1px solid lightblue;
+  text-decoration: none;
+
 }
 
-.side_main {
+/*  */
+.rooms {
   background-color: #2f3e51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
 }
-
+.room {
+  padding: 20px 0 40px;
+}
+.room-name a {
+  text-decoration: none;
+  color: #ffffff;
+}
 
 /* チャット画面 */
 .chat {
@@ -30,13 +55,13 @@
   flex-direction: column;
 }
 
-.chat_top {
+.chat-top {
   background-color: #ffffff;
   height: 100px;
   padding: 0 40px;
 }
 
-.chat_main {
+.chat-main {
   background-color: #fafafa;
   height: calc(100vh - 190px);
   padding: 46px 40px 0;
