--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -48,27 +48,111 @@ text-decoration: none;
   color: #ffffff;
 }
 
-/* チャット画面 */
+/* チャット全体 */
 .chat {
   background-color: #ffffff;
   width: calc(100vw - 300px);
   flex-direction: column;
 }
 
-.chat-top {
-  background-color: #ffffff;
+/* チャットヘッダー */
+.chat-header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.chat-main {
+.header-title {
+  color: #333;
+  font-size: 24px;
+  margin-top: 36px;
+}
+
+.header-button {
+  margin-top: 40px;
+}
+
+.header-button a {
+  text-decoration: none;
+  border: 1px solid darkred;
+  color: darkred;
+  padding: 20px;
+}
+
+
+/* チャットメイン */
+.messages {
   background-color: #fafafa;
   height: calc(100vh - 190px);
   padding: 46px 40px 0;
+  overflow: scroll;
+}
+.message {
+  padding-bottom: 40px;
+}
+.upper-message {
+  padding-top: 10px;
+  display: flex;
+}
+.sender{
+  color: #434A54;
+  font-size: 16px;
+}
+.send-date{
+  color: #999;
+  font-size: 12px;
+  padding-left: 10px;
+}
+.message-content {
+  color: #434A54;
+  font-size: 14px;
+  padding-top: 10px;
 }
 
+
+
+
+
+
+
+
+/* フォーム */
 .form {
-  background-color: #dddddd;
+  background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
+}
+.form-input {
+  background-color: white;
+  width: 100%;
+  display: flex;
+}
+.form-message {
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+.form-submit {
+  background-color: #38AEF0;
+  border: none;
+  color: white;
+  font-size: 16px;
+  height: 50px;
+  margin-left: 15px;
+  padding: 0 20px;
+}
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+.hidden {
+  display: none;
 }
